k8s/ingress-creation/day9-app.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: web 
  namespace: app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web 
  template:
    metadata:
      labels:
        app: web 
    spec: 
      containers:
        - name: nginx 
          image: nginx:1.25
          ports:
            - containerPort: 80

---

apiVersion: v1 
kind: Service 
metadata: 
  name: web 
  namespace: app 
spec: 
  type: ClusterIP
  selector:
    app: web 
  ports:
    - port: 80
      targetPort: 80
