k8s/ingress-creation/day9-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata: 
  name: web-ingress 
  namespace: app 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 

spec: 
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend: 
              service:
                name: web 
                port: 
                  number: 80
